Fix tech item wrap

--- a/themes/v4/assets/css/style.css
+++ b/themes/v4/assets/css/style.css
@@ -585,6 +585,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
 }
@@ -611,6 +615,10 @@ video {
 
 .self-center {
   align-self: center;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 
 .rounded {
